# AI_AGENT_Ixora_Meeting_Booking

./: .dockerignore  .env.docker.example  .env.example  .env.production  .gitignore  ADMIN_PANEL_GUIDE.md  ARCHITECTURE_EXPLANATION.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  EMBED_INSTRUCTIONS.md  QUICKSTART_DOCKER.md  QUICKSTART_WEB.md  README.md  STRUCTURE.md  VALIDATION_FEATURES.md  api.py  docker-compose.yml  main.py  pyproject.toml
agent/: __init__.py  graph.py  nodes.py  tools.py
backend/: admin_api.py  api.py  check_system.sh  create_admin.py  ixora_chat.db  main.py  pyproject.toml  start_api.sh
backend/admin/: __init__.py  auth.py
backend/agent/: graph.py  llm_helpers.py  nodes.py  rag_nodes.py  supervisor.py  tools.py  unified_agent.py
backend/chroma_db/: chroma.sqlite3
backend/database/: __init__.py  chat_logger.py  database.py  init_db.py  models.py
backend/rag/: README_DOCUMENTS.md  __init__.py  add_document.py  add_document_with_retry.py  add_with_local_embeddings.py  add_with_openai.py  check_embed.py  document_loader.py  init_vectorstore.py  rag_chain.py  vector_store.py
backend/utils/: __init__.py  api_booking.py  cache.py  llm_tracker.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatWidget.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/layouts/: AdminLayout.jsx
frontend/src/pages/: AdminDashboard.jsx  ChatDetail.jsx  Login.jsx
tests/: README.md
utils/: api_booking.py  api_with_session.py  browser_automation.py
(+4 files in other folders)
